<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_common"
    android:orientation="vertical" >

    <include layout="@layout/header_layout" />

    <TextView
        style="@style/text_small_black_size_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/hint_input_login_password" />

    <View style="@style/line_horizontal_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/WHITE"
        android:orientation="horizontal"
        android:paddingLeft="12dp" >

        <TextView
            style="@style/edit_text_size_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:text="@string/password" />

        <org.xsl781.ui.view.ClearEditText
            android:id="@+id/cedt_passwd"
            style="@style/edit_text_size_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:paddingRight="12dp" />

        <ImageView
            android:id="@+id/password_show"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_login_pwd_eye_close"
            android:visibility="visible" />
    </LinearLayout>

    <View style="@style/line_horizontal_common" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_next"
        style="@style/top_text_color_size_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_ll_height"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/btn_grey_big_default"
        android:scaleType="fitCenter"
        android:text="@string/next" />

</LinearLayout>