<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_common"
    android:orientation="vertical" >

    <include layout="@layout/header_layout" />

    <View style="@style/line_horizontal_common" />

    <TextView
        android:id="@+id/reset_login_pwd_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:gravity="center_vertical"
        android:textColor="@color/text_black_common"
        android:textSize="12sp" />

    <View style="@style/line_horizontal_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/WHITE"
        android:orientation="vertical"
        android:paddingLeft="12dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/edit_text_size_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center|left"
                android:text="@string/vcode" />

            <org.xsl781.ui.view.ClearEditText
                android:id="@+id/cedt_vcode"
                style="@style/edit_text_size_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:hint="@string/input_sms_vcode"
                android:inputType="number"
                android:paddingLeft="6dp"
                android:paddingRight="12dp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:padding="4dp" >

                <Button
                    android:id="@+id/btn_resend_sms_vcode"
                    style="@style/text_small_black_size_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@color/WHITE"
                    android:gravity="center"
                    android:text="获取验证码"
                    android:textColor="@color/text_blue_common"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <!-- android:inputType="mobile" -->

        <View style="@style/line_horizontal_common" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/edit_text_size_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center|left"
                android:text="@string/new_password" />

            <org.xsl781.ui.view.ClearEditText
                android:id="@+id/cedt_passwd"
                style="@style/edit_text_size_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.9"
                android:background="@android:color/transparent"
                android:hint="@string/register_new_pwd_hint_text"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:paddingRight="12dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/password_show"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="0.6"
                android:contentDescription="@string/app_name"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_login_pwd_eye_close"
                android:visibility="visible" />
        </LinearLayout>

        <View style="@style/line_horizontal_common" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/edit_text_size_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center|left"
                android:singleLine="true"
                android:text="确认密码" />

            <org.xsl781.ui.view.ClearEditText
                android:id="@+id/cedt_passwd2"
                style="@style/edit_text_size_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.9"
                android:background="@android:color/transparent"
                android:hint="@string/register_new_again_pwd_hint_text"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:paddingRight="12dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/password_show2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_weight="0.6"
                android:contentDescription="@string/app_name"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_login_pwd_eye_close"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/line_horizontal_common" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/login_pwd_reset_prompt_text"
        android:textColor="@color/text_gray_common"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_next"
        style="@style/top_text_color_size_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_ll_height"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/btn_grey_big_default"
        android:scaleType="fitCenter"
        android:text="@string/complete" />

</LinearLayout>